--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,94 @@
     <main>
       <section>
         <h1>Портфоліо</h1>
+        <ul>
+          <li><button type="button">Усі</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/Технокряк.jpg" alt="сторінка веб-сайту компанії" width="370" />
+            <div>
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </div>
+          </li>
+
+          <li>
+            <img src="./images/Постер.jpg" alt="постер баскетбольного клубу" width="370" />
+            <div>
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </div>
+          </li>
+
+          <li>
+            <img src="./images/Ресторан_Seafood.jpg" alt="логотип ресторану Seafood" width="370" />
+            <div>
+              <h2>Ресторан Seafood</h2>
+              <p>Додаток</p>
+            </div>
+          </li>
+
+          <li>
+            <img src="./images/Проєкт_Prime.jpg" alt="комп'ютерні навушники" width="370" />
+            <div>
+              <h2>Проєкт Prime</h2>
+              <p>Маркетинг</p>
+            </div>
+          </li>
+
+          <li>
+            <img src="./images/Проєкт_Boxes.jpg" alt="Дві коробки" width="370" />
+            <div>
+              <h2>Проєкт Boxes</h2>
+              <p>Додаток</p>
+            </div>
+          </li>
+
+          <li>
+            <img
+              src="./images/Inspiration_has_no_Borders.jpg"
+              alt="монітор з зображенням веб-сайту компанії"
+              width="370"
+            />
+            <div>
+              <h2 lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </div>
+          </li>
+
+          <li>
+            <img src="./images/Видання_Limited_Edition.jpg" alt="журнал у розвороті" width="370" />
+            <div>
+              <h2>Видання Limited Edition</h2>
+              <p>Дизайн</p>
+            </div>
+          </li>
+
+          <li>
+            <img src="./images/Проєкт_LAB.jpg" alt="картка з назвою проєкту Lab" width="370" />
+            <div>
+              <h2>Проєкт LAB</h2>
+              <p>Маркетинг</p>
+            </div>
+          </li>
+
+          <li>
+            <img
+              src="./images/Growing_Business.jpg"
+              alt="монітор з назвою сайту Growing Growing Business"
+              width="370"
+            />
+            <div>
+              <h2 lang="en">Growing Business</h2>
+              <p>Додаток</p>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
 
