--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
+
+    <!-- хедер -->
+
     <header>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <a href="./index.html" lang="en">Web<span class="logo-item">Studio</span></a>
+  
+      <!--навигация-->
 
       <nav>
-        <!--навигация-->
         <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+          <li>
+            <a href="./index.html">Студія</a></li>
+          <li>
+            <a href="./portfolio.html">Портфоліо</a></li>
+          <li>
+            <a href="./index.html">Контакти</a></li>
         </ul>
       </nav>
 
@@ -36,7 +48,7 @@
       </section>
 
       <section>
-        <h2>Особливості</h2>
+        <h2 class="visually-hidden">Особливості</h2>
         <ul>
           <li>
             <h3>Увага до деталей</h3>
@@ -57,9 +69,9 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
             <img src="./images/1.jpg" alt="розробка програм гаджетах" width="370" />
           </li>
@@ -72,7 +84,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -103,15 +115,15 @@
     </main>
 
     <footer>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        <ul>
-          <li>
+     <a href="./index.html" lang="en">Web<span>Studio</span></a>
+ 
+        <ul class="list">
+          <li >
             <a
               href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17"
               target="_blank"
               rel="noreferrer noopener"
-            >
+            class="hero-title" >
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
