--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+   <a href="./index.html" lang="en" class="logo">Web<span class="logo-item">Studio</span></a>
+ 
 
       <nav>
         <!--навигация-->
@@ -31,7 +36,7 @@
 
     <main>
       <section>
-        <h1>Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul>
           <li><button type="button">Усі</button></li>
           <li><button type="button">Веб-сайти</button></li>
@@ -41,7 +46,7 @@
         </ul>
         <ul>
           <li>
-            <img src="./images/Технокряк.jpg" alt="сторінка веб-сайту компанії" width="370" />
+            <img src="./images/8.jpg" alt="сторінка веб-сайту компанії" width="370" />
             <div>
               <h2>Технокряк</h2>
               <p>Веб-сайт</p>
@@ -49,7 +54,7 @@
           </li>
 
           <li>
-            <img src="./images/Постер.jpg" alt="постер баскетбольного клубу" width="370" />
+            <img src="./images/9.jpg" alt="постер баскетбольного клубу" width="370" />
             <div>
               <h2>Постер New Orlean vs Golden Star</h2>
               <p>Дизайн</p>
@@ -57,7 +62,7 @@
           </li>
 
           <li>
-            <img src="./images/Ресторан_Seafood.jpg" alt="логотип ресторану Seafood" width="370" />
+            <img src="./images/10.jpg" alt="логотип ресторану Seafood" width="370" />
             <div>
               <h2>Ресторан Seafood</h2>
               <p>Додаток</p>
@@ -65,7 +70,7 @@
           </li>
 
           <li>
-            <img src="./images/Проєкт_Prime.jpg" alt="комп'ютерні навушники" width="370" />
+            <img src="./images/11.jpg" alt="комп'ютерні навушники" width="370" />
             <div>
               <h2>Проєкт Prime</h2>
               <p>Маркетинг</p>
@@ -73,7 +78,7 @@
           </li>
 
           <li>
-            <img src="./images/Проєкт_Boxes.jpg" alt="Дві коробки" width="370" />
+            <img src="./images/12.jpg" alt="Дві коробки" width="370" />
             <div>
               <h2>Проєкт Boxes</h2>
               <p>Додаток</p>
@@ -81,11 +86,7 @@
           </li>
 
           <li>
-            <img
-              src="./images/Inspiration_has_no_Borders.jpg"
-              alt="монітор з зображенням веб-сайту компанії"
-              width="370"
-            />
+            <img src="./images/13.jpg" alt="монітор з зображенням веб-сайту компанії" width="370" />
             <div>
               <h2 lang="en">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
@@ -93,7 +94,7 @@
           </li>
 
           <li>
-            <img src="./images/Видання_Limited_Edition.jpg" alt="журнал у розвороті" width="370" />
+            <img src="./images/14.jpg" alt="журнал у розвороті" width="370" />
             <div>
               <h2>Видання Limited Edition</h2>
               <p>Дизайн</p>
@@ -101,7 +102,7 @@
           </li>
 
           <li>
-            <img src="./images/Проєкт_LAB.jpg" alt="картка з назвою проєкту Lab" width="370" />
+            <img src="./images/15.jpg" alt="картка з назвою проєкту Lab" width="370" />
             <div>
               <h2>Проєкт LAB</h2>
               <p>Маркетинг</p>
@@ -110,7 +111,7 @@
 
           <li>
             <img
-              src="./images/Growing_Business.jpg"
+              src="./images/16.jpg"
               alt="монітор з назвою сайту Growing Growing Business"
               width="370"
             />
@@ -124,8 +125,8 @@
     </main>
 
     <footer>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
+     <a href="./index.html" lang="en" class="logo">Web<span class="logo-item">Studio</span></a>
+       <address>
         <ul>
           <li>
             <a
