--- a/index.html
+++ b/index.html
@@ -15,63 +15,63 @@
 
     <!-- хедер -->
 
-    <header>
-      <a href="./index.html" lang="en">Web<span class="logo-item">Studio</span></a>
-  
+    <header class="header">
+     
       <!--навигация-->
 
-      <nav>
-        <ul>
-          <li>
-            <a href="./index.html">Студія</a></li>
-          <li>
-            <a href="./portfolio.html">Портфоліо</a></li>
-          <li>
-            <a href="./index.html">Контакти</a></li>
+      <nav class="header-nav">
+         <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a href="./index.html" class="header-nav-link current">Студія</a></li>
+          <li class="header-nav-item">
+            <a href="./portfolio.html" class="header-nav-link">Портфоліо</a></li>
+          <li class="header-nav-item">
+            <a href="./index.html" class="header-nav-link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="header-contact">
         <li>
-          <a href="mailto:minfo@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:minfo@devstudio.com" class="mail-link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-btn button">Замовити послугу</button>
       </section>
 
-      <section>
+      <section class="feature">
         <h2 class="visually-hidden">Особливості</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <ul class="feature-list">
+          <li class="feature-item">
+            <h3 class="feature-title">Увага до деталей</h3>
+            <p class="feature-text>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="feature-item">
+            <h3 class="feature-title">Пунктуальність</h3>
+            <p class="feature-text>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="feature-item">
+            <h3 class="feature-title">Планування</h3>
+            <p class="feature-text>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="feature-item">
+            <h3 class="feature-title">Сучасні технології</h3>
+            <p class="feature-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
 
-      <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="work-list">
           <li>
             <img src="./images/1.jpg" alt="розробка програм гаджетах" width="370" />
           </li>
@@ -84,56 +84,58 @@
         </ul>
       </section>
 
-      <section class="section">
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/4.jpg" alt="член команди" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-name">Ігор Дем'яненко</h3>
+            <p lang="en" class="team-activity">Product Designer</p>
           </li>
 
           <li>
             <img src="./images/5.jpg" alt="член команди" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-name>Ольга Рєпіна</h3>
+            <p lang="en" class="team-activity">Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/6.jpg" alt="член команди" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-name>Микола Тарасов</h3>
+            <p lang="en" class="team-activity">Marketing</p>
           </li>
 
           <li>
             <img src="./images/7.jpg" alt="член команди" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-name>Михайло Єрмаков</h3>
+            <p lang="en" class="team-activity">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-     <a href="./index.html" lang="en">Web<span>Studio</span></a>
+ <!-- футер -->
  
-        <ul class="list">
-          <li >
+    <footer class="footer">
+     <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+      <address class="footer-adress">
+        <ul class="footer-adress-list">
+          <li class="footer-adress-item">
             <a
               href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17"
+              class="footer-map" 
               target="_blank"
-              rel="noreferrer noopener"
-            class="hero-title" >
+              rel="noreferrer noopener">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
 
-          <li>
-            <a href="mailto:minfo@devstudio.com">info@devstudio.com</a>
+          <li class="footer-mail">
+            <a href="mailto:minfo@devstudio.com" class="footer-mail">info@devstudio.com</a>
           </li>
 
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
