--- a/portfolio.html
+++ b/portfolio.html
@@ -10,102 +10,110 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-   <a href="./index.html" lang="en" class="logo">Web<span class="logo-item">Studio</span></a>
- 
 
-      <nav>
-        <!--навигация-->
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./index.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+  <body>
+
+    <!-- хедер -->
+
+    <header class="header">
+     
+      <!--навигация-->
+
+      <nav class="header-nav">
+         <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a href="./index.html" class="header-nav-link current">Студія</a></li>
+          <li class="header-nav-item">
+            <a href="./portfolio.html" class="header-nav-link">Портфоліо</a></li>
+          <li class="header-nav-item">
+            <a href="./index.html" class="header-nav-link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="header-contact">
         <li>
-          <a href="mailto:minfo@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:minfo@devstudio.com" class="mail-link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
+
     <main>
-      <section>
+      <section class="portfolio">
         <h1 class="visually-hidden">Портфоліо</h1>
-        <ul>
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="portfolio-list">
+          <li><button type="button" class="button">Усі</button></li>
+          <li><button type="button" class="button">Веб-сайти</button></li>
+          <li><button type="button" class="button">Додатки</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio-list">
           <li>
             <img src="./images/8.jpg" alt="сторінка веб-сайту компанії" width="370" />
             <div>
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class=".portfolio-text">Веб-сайт</p>
             </div>
           </li>
 
           <li>
             <img src="./images/9.jpg" alt="постер баскетбольного клубу" width="370" />
             <div>
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p class=".portfolio-text">Дизайн</p>
             </div>
           </li>
 
           <li>
             <img src="./images/10.jpg" alt="логотип ресторану Seafood" width="370" />
             <div>
-              <h2>Ресторан Seafood</h2>
-              <p>Додаток</p>
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p class=".portfolio-text">Додаток</p>
             </div>
           </li>
 
           <li>
             <img src="./images/11.jpg" alt="комп'ютерні навушники" width="370" />
             <div>
-              <h2>Проєкт Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-title">Проєкт Prime</h2>
+              <p class=".portfolio-text">Маркетинг</p>
             </div>
           </li>
 
           <li>
             <img src="./images/12.jpg" alt="Дві коробки" width="370" />
             <div>
-              <h2>Проєкт Boxes</h2>
-              <p>Додаток</p>
+              <h2 class="portfolio-title">Проєкт Boxes</h2>
+              <p class=".portfolio-text">Додаток</p>
             </div>
           </li>
 
           <li>
             <img src="./images/13.jpg" alt="монітор з зображенням веб-сайту компанії" width="370" />
             <div>
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
+              <p class=".portfolio-text">Веб-сайт</p>
             </div>
           </li>
 
           <li>
             <img src="./images/14.jpg" alt="журнал у розвороті" width="370" />
             <div>
-              <h2>Видання Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-title">Видання Limited Edition</h2>
+              <p class=".portfolio-text">Дизайн</p>
             </div>
           </li>
 
           <li>
             <img src="./images/15.jpg" alt="картка з назвою проєкту Lab" width="370" />
             <div>
-              <h2>Проєкт LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-title">Проєкт LAB</h2>
+              <p class=".portfolio-text">Маркетинг</p>
             </div>
           </li>
 
@@ -116,34 +124,36 @@
               width="370"
             />
             <div>
-              <h2 lang="en">Growing Business</h2>
-              <p>Додаток</p>
+              <h2 lang="en" class="portfolio-title">Growing Business</h2>
+              <p class=".portfolio-text">Додаток</p>
             </div>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-     <a href="./index.html" lang="en" class="logo">Web<span class="logo-item">Studio</span></a>
-       <address>
-        <ul>
-          <li>
+  <!-- футер -->
+ 
+    <footer class="footer">
+     <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+      <address class="footer-adress">
+        <ul class="footer-adress-list">
+          <li class="footer-adress-item">
             <a
               href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17"
+              class="footer-map" 
               target="_blank"
-              rel="noreferrer noopener"
-            >
+              rel="noreferrer noopener">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
 
-          <li>
-            <a href="mailto:minfo@devstudio.com">info@devstudio.com</a>
+          <li class="footer-mail">
+            <a href="mailto:minfo@devstudio.com" class="footer-mail">info@devstudio.com</a>
           </li>
 
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
