--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         <ul class="feature-list">
           <li class="feature-item">
             <h3 class="feature-title">Увага до деталей</h3>
-            <p class="feature-text>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="feature-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="feature-item">
             <h3 class="feature-title">Пунктуальність</h3>
-            <p class="feature-text>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="feature-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="feature-item">
             <h3 class="feature-title">Планування</h3>
-            <p class="feature-text>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="feature-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="feature-item">
             <h3 class="feature-title">Сучасні технології</h3>
@@ -95,19 +95,19 @@
 
           <li>
             <img src="./images/5.jpg" alt="член команди" width="270" />
-            <h3 class="team-name>Ольга Рєпіна</h3>
+            <h3 class="team-name">Ольга Рєпіна</h3>
             <p lang="en" class="team-activity">Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/6.jpg" alt="член команди" width="270" />
-            <h3 class="team-name>Микола Тарасов</h3>
+            <h3 class="team-name">Микола Тарасов</h3>
             <p lang="en" class="team-activity">Marketing</p>
           </li>
 
           <li>
             <img src="./images/7.jpg" alt="член команди" width="270" />
-            <h3 class="team-name>Михайло Єрмаков</h3>
+            <h3 class="team-name">Михайло Єрмаков</h3>
             <p lang="en" class="team-activity">UI Designer</p>
           </li>
         </ul>
@@ -115,9 +115,9 @@
     </main>
 
  <!-- футер -->
- 
+
     <footer class="footer">
-     <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+     <a href="./index.html" class="logo">Web<span class="logo-text-footer">Studio</span></a>
       <address class="footer-adress">
         <ul class="footer-adress-list">
           <li class="footer-adress-item">
