--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
          <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
         <ul class="header-nav-list">
           <li class="header-nav-item">
-            <a href="./index.html" class="header-nav-link current">Студія</a></li>
+            <a href="./index.html" class="header-nav-link">Студія</a></li>
           <li class="header-nav-item">
-            <a href="./portfolio.html" class="header-nav-link">Портфоліо</a></li>
+            <a href="./portfolio.html" class="header-nav-link current">Портфоліо</a></li>
           <li class="header-nav-item">
             <a href="./index.html" class="header-nav-link">Контакти</a></li>
         </ul>
@@ -46,18 +46,18 @@
       <section class="portfolio">
         <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="portfolio-list">
-          <li><button type="button" class="button">Усі</button></li>
-          <li><button type="button" class="button">Веб-сайти</button></li>
-          <li><button type="button" class="button">Додатки</button></li>
-          <li><button type="button" class="button">Дизайн</button></li>
-          <li><button type="button" class="button">Маркетинг</button></li>
+          <li><button type="button" class="button button-secondary">Усі</button></li>
+          <li><button type="button" class="button button-secondary">Веб-сайти</button></li>
+          <li><button type="button" class="button button-secondary">Додатки</button></li>
+          <li><button type="button" class="button button-secondary">Дизайн</button></li>
+          <li><button type="button" class="button button-secondary">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-list">
           <li>
             <img src="./images/8.jpg" alt="сторінка веб-сайту компанії" width="370" />
             <div>
               <h2 class="portfolio-title">Технокряк</h2>
-              <p class=".portfolio-text">Веб-сайт</p>
+              <p class="portfolio-text">Веб-сайт</p>
             </div>
           </li>
 
@@ -65,7 +65,7 @@
             <img src="./images/9.jpg" alt="постер баскетбольного клубу" width="370" />
             <div>
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class=".portfolio-text">Дизайн</p>
+              <p class="portfolio-text">Дизайн</p>
             </div>
           </li>
 
@@ -73,7 +73,7 @@
             <img src="./images/10.jpg" alt="логотип ресторану Seafood" width="370" />
             <div>
               <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class=".portfolio-text">Додаток</p>
+              <p class="portfolio-text">Додаток</p>
             </div>
           </li>
 
@@ -81,7 +81,7 @@
             <img src="./images/11.jpg" alt="комп'ютерні навушники" width="370" />
             <div>
               <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class=".portfolio-text">Маркетинг</p>
+              <p class="portfolio-text">Маркетинг</p>
             </div>
           </li>
 
@@ -89,7 +89,7 @@
             <img src="./images/12.jpg" alt="Дві коробки" width="370" />
             <div>
               <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class=".portfolio-text">Додаток</p>
+              <p class="portfolio-text">Додаток</p>
             </div>
           </li>
 
@@ -97,7 +97,7 @@
             <img src="./images/13.jpg" alt="монітор з зображенням веб-сайту компанії" width="370" />
             <div>
               <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
-              <p class=".portfolio-text">Веб-сайт</p>
+              <p class="portfolio-text">Веб-сайт</p>
             </div>
           </li>
 
@@ -105,7 +105,7 @@
             <img src="./images/14.jpg" alt="журнал у розвороті" width="370" />
             <div>
               <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class=".portfolio-text">Дизайн</p>
+              <p class="portfolio-text">Дизайн</p>
             </div>
           </li>
 
@@ -113,7 +113,7 @@
             <img src="./images/15.jpg" alt="картка з назвою проєкту Lab" width="370" />
             <div>
               <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class=".portfolio-text">Маркетинг</p>
+              <p class="portfolio-text">Маркетинг</p>
             </div>
           </li>
 
@@ -125,7 +125,7 @@
             />
             <div>
               <h2 lang="en" class="portfolio-title">Growing Business</h2>
-              <p class=".portfolio-text">Додаток</p>
+              <p class="portfolio-text">Додаток</p>
             </div>
           </li>
         </ul>
@@ -135,7 +135,7 @@
   <!-- футер -->
  
     <footer class="footer">
-     <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+     <a href="./index.html" class="logo">Web<span class="logo-text-footer">Studio</span></a>
       <address class="footer-adress">
         <ul class="footer-adress-list">
           <li class="footer-adress-item">
